style.css
/* ... */
/* ========================= ABOUT SECTION ============================= */


#about {
    position: absolute;
    padding-top: 1vh;
    width: 100vw;
    height: 100vh;
    background-color: var(--white);
    overflow: hidden;
}

#about .pill {
    /* margin-top: auto; */
    width: 20vw;
    margin-bottom: 10px;
}

#about .about-balen {
    justify-content: center;
    padding-top: 10px;
    width: 60vw;
    /* height: 90vh; */
    height: auto;
    background-color: var(--red);
    border-radius: 0 20% 10% 0;
    border: 2px solid var(--red-dark);
    box-shadow: 1px 10px 10px var(--red);
    overflow: hidden;

}


#about .about-balen p {
    color: var(--white);
    font-weight: 800;
    padding: 3vw;
    /* font-size: 3.8vw; */
    font-size: clamp(1.8rem, 3vw, 2.3rem);
    word-wrap: break-word;

}


/* Balen PHOTO STANDING ================ */

#about .about-photo {
    display: flex;
    position: absolute;
    /* top: 0; */
    bottom: 0;
    left: 70%;
    transform: translateX(-30%);
    width: 40vw;
    height: auto;
    /* background-color:rgba(127, 255, 212, 0.5); */
    z-index: 1;
}


#about .about-photo img {
    position: relative;
    /* top: 0px; */
    padding: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
}



/* RSP LOGO ======================= */

#about .rsp-photo {
    display: flex;
    position: absolute;
    top: 20vh;
    /* bottom: 0; */
    left: 65%;
    transform: translateX(-40%);
    width: 250px;
    height: auto;
    opacity: 0.4;
    rotate: 45deg;
    /* background-color:rgba(127, 255, 212, 0.418); */
}

#about .rsp-photo img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}




/* ===============RESPONSIVENESS MEDIA ================== */

@media (max-width: 1000px) {

    #about .about-balen {
        border-radius: 0 50px 5px 0;
        width: 95vw;
        height: 60vh;
        /* height: auto; */
    }

    #about .about-balen p {
        font-size: clamp(1.2rem, 3.8vw, 1.8rem);
    }

    #about .about-photo {
        width: clamp(220px, 50vw, 240px);
        /* right: 90%; */
        left: 60%;
        overflow: hidden;
    }

    #about .rsp-photo {
        width: clamp(200px, 50vw, 200px);
        left: 30%;
        top: 80%;

    }

}


/* ============TIME LINE =================== */
#timeline {
    width: 100vw;
    height: 200vh;
    background-color: blue;
}







/* ================socials nav link ================ */
#socials {
    width: 100vw;
    height: auto;
    display: flex;
    text-align: center;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;

}

/* ====social-link text ========= */
.sociallink {
    width: clamp(200px, 7vw, 300px);
    color: var(--white);
    text-shadow: 1px 1px 15px var(--white);
    margin: 10px 5px 5px 10px;
    padding: 5px;
    background-color: var(--black);
    border-radius: 50px;
    text-transform: uppercase;


}

#socials h2 {
    /* top songs text */
    /* width: clamp(350px, 10vw, 600px); */
    color: var(--white);
    text-shadow: 2px 3px 4px var(--black);
    margin: 20px 5px 5px 10px;
    padding: 5px;
    /* font-size: 1.5rem; */
    /* background-color: var(--black); */
    /* border-radius: 50px; */
    /* text-transform: uppercase; */
}


#topsong-text {
    width: 90vw;
    background-color: var(--red-dark);
    border-radius: 20px;
    padding: 10px;
}


.social-media {
    /* background-color: rgba(0, 0, 0, 0.5); */
    /* fill: red; */

    width: 90vw;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    gap: 5%;
    padding: 20px;

}

.social-media a {
    display: flex;
    align-items: center;
    /* text-align: center; */
    justify-content: center;

    font-size: clamp(2.5rem, 5vw, 4rem);
    height: 80px;
    width: 80px;
    /* background-color: var(--white); */
    border-radius: 50%;
    text-decoration: none;
    color: var(--white);
    /* object-fit: */
}

.social-media a:hover {
    background-color: rgb(255, 255, 255);

    .fa-brands.fa-facebook {
        color: blue;
    }

    .fa-brands.fa-instagram {
        color: rgb(207, 0, 207);
    }

    .fa-brands.fa-x-twitter {
        color: grey;
    }

    .fa-brands.fa-tiktok {
        color: rgb(152, 0, 0);
    }

    .fa-brands.fa-youtube {
        color: red;
    }

    .fa-solid.fa-phone {
        color: rgb(0, 152, 233);
    }

    .fa-brands.fa-whatsapp {
        color: rgb(0, 203, 0);
    }

}

/* =================youtube videos ===================== */

.yt-container {
    max-width: 100%;
    /* height: 1000px; */
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    
    /* flex-wrap: wrap; */
    justify-content: center;
    gap: 30px;
    margin: 30px 10px;

    max-width: 1400px; 
    width: 80%;



}

.yt-video {
    background-color: var(--red-dark);
    padding: 8px;
    border-radius: 15px;
    overflow: hidden;
    display: flex;
    transition: transform 0.5 ease-in-out;
}

.yt-video:hover {
    transform: scale(1.1);
}


.yt-video iframe {
  width: 100%;
  height: auto !important;
  aspect-ratio: 16/9;
  border: none;
  border-radius: 10px;
  display: block;
  
}

@media (max-width: 1000px) {
    .yt-container {
        grid-template-columns: 1fr;
    }
}


footer {
    background-color: var(--red-dark);
    width: 100vw;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    color: var(--white);
    text-align: center;
    font-size: clamp(.7rem, 2vw, 1rem);
    text-shadow: 2px 3px 4px black;
}

footer h2 {
    color: var(--yellow);
    margin: 0;


}

footer h3 {
    margin: 5px 5px 20px 5px;
}

